Bug 828828: Use monitor around all accesses to stream array r=derf