content/media/webrtc/MediaEngineWebRTCAudio.cpp
@@ -89,7 +89,10 @@ MediaEngineWebRTCAudioSource::Start(SourceMediaStream* aStream, TrackID aID)
     return NS_ERROR_FAILURE;
   }
 
-  mSources.AppendElement(aStream);
+  {
+    ReentrantMonitorAutoEnter enter(mMonitor);
+    mSources.AppendElement(aStream);
+  }
 
   AudioSegment* segment = new AudioSegment();
   segment->Init(CHANNELS);
@@ -119,22 +122,23 @@ MediaEngineWebRTCAudioSource::Start(SourceMediaStream* aStream, TrackID aID)
 nsresult
 MediaEngineWebRTCAudioSource::Stop(SourceMediaStream *aSource, TrackID aID)
 {
-  if (!mSources.RemoveElement(aSource)) {
-    // Already stopped - this is allowed
-    return NS_OK;
-  }
-  if (!mSources.IsEmpty()) {
-    return NS_OK;
-  }
-  if (mState != kStarted) {
-    return NS_ERROR_FAILURE;
-  }
-  if (!mVoEBase) {
-    return NS_ERROR_FAILURE;
-  }
-
   {
     ReentrantMonitorAutoEnter enter(mMonitor);
+
+    if (!mSources.RemoveElement(aSource)) {
+      // Already stopped - this is allowed
+      return NS_OK;
+    }
+    if (!mSources.IsEmpty()) {
+      return NS_OK;
+    }
+    if (mState != kStarted) {
+      return NS_ERROR_FAILURE;
+    }
+    if (!mVoEBase) {
+      return NS_ERROR_FAILURE;
+    }
+
     mState = kStopped;
     aSource->EndTrack(aID);
   }
